# georgia-currency-exchange-bot

./: .env.test  .gitignore  Makefile  README.md  alembic.ini  conftest.py  coverage_plan.md  db-test.sqlite  db.sqlite  main.py  offices_search.md  prompt_plan.md  pyproject.toml  pytest.ini  refactoring_plan.md  refactoring_todo.md  spec.md  test_base_requester.py  test_logging.py  test_sync_service.py  todo.md
src/: main.py  start_bot.py
src/bot/: bot.py  bot_entry_point.py
src/bot/keyboards/: __init__.py  inline.py
src/bot/routers/: __init__.py  conversion.py  currency.py  location.py  org.py  rates.py  start.py
src/bot/utils/: logging_decorator.py  map_links.py
src/config/: logging_conf.py  settings.py
src/db/: __init__.py  session.py
src/external_connectors/: __init__.py
src/repositories/: __init__.py  base_repository.py  office_repository.py  organization_repository.py  rate_repository.py  schedule_repository.py
src/scheduler/: __init__.py  run_scheduler.py  scheduler.py
src/schemas/: __init__.py  office.py  organization.py  rate.py  schedule.py
src/services/: SyncService.py  currency_service.py  sync_service.py
src/tests/: conftest.py  test_api_connector.py  test_db.py  test_models.py  test_repositories.py  test_sync_service.py
src/utils/: base_requester.py  datetime_utils.py  http_client.py  schedule_parser.py
tests/: conftest.py
tests/mocks/: api_mocks.py
tests/unit/: test_base_requester.py  test_bot_main.py  test_bot_setup.py  test_currency_service.py  test_db.py  test_map_links.py  test_models.py  test_scheduler.py  test_sync_service.py
(+38 files in other folders)
