[project]
name = "georgia-currency-exchange-bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiogram>=3.20.0.post0",
    "sqlmodel>=0.0.24",
    "pydantic-settings>=2.0.0",
    "pytest>=7.0.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
]
