[project]
name = "georgia-currency-exchange-bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiogram>=3.20.0.post0",
    "sqlmodel>=0.0.24",
    "pydantic-settings>=2.0.0",
    "pytest>=7.0.0",
    "loguru>=0.7.3",
    "aiohttp>=3.8.0",
]

[dependency-groups]
dev = [
    "coverage>=7.8.0",
    "mypy>=1.15.0",
    "pytest>=8.3.5",
    "ruff>=0.11.7",
]
