[project]
name = "georgia-currency-exchange-bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiogram>=3.20.0.post0",
    "sqlmodel>=0.0.24",
    "pydantic-settings>=2.0.0",
    "loguru>=0.7.3",
    "aiohttp>=3.8.0",
    "alembic>=1.15.2",
    "apscheduler>=3.11.0",
    "aiosqlite>=0.21.0",
    "greenlet>=3.2.1",
    "pytz>=2025.2",
    "types-pytz>=2025.2.0.20250326",
]

[dependency-groups]
dev = [
    "coverage>=7.8.0",
    "mypy>=1.15.0",
    "pytest>=8.3.5",
    "pytest-asyncio>=0.26.0",
    "ruff>=0.11.7",
]

[tool.coverage.run]
omit = [
    "src/db/migrations/*",
    "src/config/*",
]
